--- a/index.html
+++ b/index.html
@@ -534,6 +534,265 @@
             </div>
           </li>
 
+          <li class="video__item">
+            <div class="video-card">
+              <a href="#" class="video__link">
+                <img class="video__image" src="./assetts/images/video-image.png" alt="video image" class="video__image">
+                <span class="video__duration">29:58</span>
+              </a>
+
+              <div class="video-card-body">
+                <a href="#" class="channel__link">
+                  <img class="channel__image" src="./assetts/images/video-channel-image.png" alt="video image"
+                    class="video__image">
+                </a>
+
+                <div class="creator-info">
+                  <a href="#" class="video__link">
+                    <h2 class="video__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                  </a>
+
+                  <div class="channel-info">
+                    <span class="creator__name">Name profile</span>
+                    <svg class="creator__verified-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6 1C3.24 1 1 3.24 1 6C1 8.76 3.24 11 6 11C8.76 11 11 8.76 11 6C11 3.24 8.76 1 6 1ZM4.96 8.965L2.485 6.49L3.51 5.465L4.96 6.915L8.635 3.24L9.66 4.265L4.96 8.965Z"
+                        fill="#727272" />
+                    </svg>
+                  </div>
+
+                  <div class="more-info">
+                    <span class="video__views">27K views</span>
+                    <span class="video__uploaded">1 day ago</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+
+          <li class="video__item">
+            <div class="video-card">
+              <a href="#" class="video__link">
+                <img class="video__image" src="./assetts/images/video-image.png" alt="video image" class="video__image">
+                <span class="video__duration">29:58</span>
+              </a>
+
+              <div class="video-card-body">
+                <a href="#" class="channel__link">
+                  <img class="channel__image" src="./assetts/images/video-channel-image.png" alt="video image"
+                    class="video__image">
+                </a>
+
+                <div class="creator-info">
+                  <a href="#" class="video__link">
+                    <h2 class="video__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                  </a>
+
+                  <div class="channel-info">
+                    <span class="creator__name">Name profile</span>
+                    <svg class="creator__verified-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6 1C3.24 1 1 3.24 1 6C1 8.76 3.24 11 6 11C8.76 11 11 8.76 11 6C11 3.24 8.76 1 6 1ZM4.96 8.965L2.485 6.49L3.51 5.465L4.96 6.915L8.635 3.24L9.66 4.265L4.96 8.965Z"
+                        fill="#727272" />
+                    </svg>
+                  </div>
+
+                  <div class="more-info">
+                    <span class="video__views">27K views</span>
+                    <span class="video__uploaded">1 day ago</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+
+          <li class="video__item">
+            <div class="video-card">
+              <a href="#" class="video__link">
+                <img class="video__image" src="./assetts/images/video-image.png" alt="video image" class="video__image">
+                <span class="video__duration">29:58</span>
+              </a>
+
+              <div class="video-card-body">
+                <a href="#" class="channel__link">
+                  <img class="channel__image" src="./assetts/images/video-channel-image.png" alt="video image"
+                    class="video__image">
+                </a>
+
+                <div class="creator-info">
+                  <a href="#" class="video__link">
+                    <h2 class="video__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                  </a>
+
+                  <div class="channel-info">
+                    <span class="creator__name">Name profile</span>
+                    <svg class="creator__verified-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6 1C3.24 1 1 3.24 1 6C1 8.76 3.24 11 6 11C8.76 11 11 8.76 11 6C11 3.24 8.76 1 6 1ZM4.96 8.965L2.485 6.49L3.51 5.465L4.96 6.915L8.635 3.24L9.66 4.265L4.96 8.965Z"
+                        fill="#727272" />
+                    </svg>
+                  </div>
+
+                  <div class="more-info">
+                    <span class="video__views">27K views</span>
+                    <span class="video__uploaded">1 day ago</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+
+          <li class="video__item">
+            <div class="video-card">
+              <a href="#" class="video__link">
+                <img class="video__image" src="./assetts/images/video-image.png" alt="video image" class="video__image">
+                <span class="video__duration">29:58</span>
+              </a>
+
+              <div class="video-card-body">
+                <a href="#" class="channel__link">
+                  <img class="channel__image" src="./assetts/images/video-channel-image.png" alt="video image"
+                    class="video__image">
+                </a>
+
+                <div class="creator-info">
+                  <a href="#" class="video__link">
+                    <h2 class="video__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                  </a>
+
+                  <div class="channel-info">
+                    <span class="creator__name">Name profile</span>
+                    <svg class="creator__verified-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6 1C3.24 1 1 3.24 1 6C1 8.76 3.24 11 6 11C8.76 11 11 8.76 11 6C11 3.24 8.76 1 6 1ZM4.96 8.965L2.485 6.49L3.51 5.465L4.96 6.915L8.635 3.24L9.66 4.265L4.96 8.965Z"
+                        fill="#727272" />
+                    </svg>
+                  </div>
+
+                  <div class="more-info">
+                    <span class="video__views">27K views</span>
+                    <span class="video__uploaded">1 day ago</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+
+          <li class="video__item">
+            <div class="video-card">
+              <a href="#" class="video__link">
+                <img class="video__image" src="./assetts/images/video-image.png" alt="video image" class="video__image">
+                <span class="video__duration">29:58</span>
+              </a>
+
+              <div class="video-card-body">
+                <a href="#" class="channel__link">
+                  <img class="channel__image" src="./assetts/images/video-channel-image.png" alt="video image"
+                    class="video__image">
+                </a>
+
+                <div class="creator-info">
+                  <a href="#" class="video__link">
+                    <h2 class="video__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                  </a>
+
+                  <div class="channel-info">
+                    <span class="creator__name">Name profile</span>
+                    <svg class="creator__verified-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6 1C3.24 1 1 3.24 1 6C1 8.76 3.24 11 6 11C8.76 11 11 8.76 11 6C11 3.24 8.76 1 6 1ZM4.96 8.965L2.485 6.49L3.51 5.465L4.96 6.915L8.635 3.24L9.66 4.265L4.96 8.965Z"
+                        fill="#727272" />
+                    </svg>
+                  </div>
+
+                  <div class="more-info">
+                    <span class="video__views">27K views</span>
+                    <span class="video__uploaded">1 day ago</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+
+          <li class="video__item">
+            <div class="video-card">
+              <a href="#" class="video__link">
+                <img class="video__image" src="./assetts/images/video-image.png" alt="video image" class="video__image">
+                <span class="video__duration">29:58</span>
+              </a>
+
+              <div class="video-card-body">
+                <a href="#" class="channel__link">
+                  <img class="channel__image" src="./assetts/images/video-channel-image.png" alt="video image"
+                    class="video__image">
+                </a>
+
+                <div class="creator-info">
+                  <a href="#" class="video__link">
+                    <h2 class="video__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                  </a>
+
+                  <div class="channel-info">
+                    <span class="creator__name">Name profile</span>
+                    <svg class="creator__verified-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6 1C3.24 1 1 3.24 1 6C1 8.76 3.24 11 6 11C8.76 11 11 8.76 11 6C11 3.24 8.76 1 6 1ZM4.96 8.965L2.485 6.49L3.51 5.465L4.96 6.915L8.635 3.24L9.66 4.265L4.96 8.965Z"
+                        fill="#727272" />
+                    </svg>
+                  </div>
+
+                  <div class="more-info">
+                    <span class="video__views">27K views</span>
+                    <span class="video__uploaded">1 day ago</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+
+          <li class="video__item">
+            <div class="video-card">
+              <a href="#" class="video__link">
+                <img class="video__image" src="./assetts/images/video-image.png" alt="video image" class="video__image">
+                <span class="video__duration">29:58</span>
+              </a>
+
+              <div class="video-card-body">
+                <a href="#" class="channel__link">
+                  <img class="channel__image" src="./assetts/images/video-channel-image.png" alt="video image"
+                    class="video__image">
+                </a>
+
+                <div class="creator-info">
+                  <a href="#" class="video__link">
+                    <h2 class="video__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                  </a>
+
+                  <div class="channel-info">
+                    <span class="creator__name">Name profile</span>
+                    <svg class="creator__verified-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6 1C3.24 1 1 3.24 1 6C1 8.76 3.24 11 6 11C8.76 11 11 8.76 11 6C11 3.24 8.76 1 6 1ZM4.96 8.965L2.485 6.49L3.51 5.465L4.96 6.915L8.635 3.24L9.66 4.265L4.96 8.965Z"
+                        fill="#727272" />
+                    </svg>
+                  </div>
+
+                  <div class="more-info">
+                    <span class="video__views">27K views</span>
+                    <span class="video__uploaded">1 day ago</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+
         </ul>
 
       </section>
